[gd_scene load_steps=2 format=3 uid="uid://dj82k1lo6lmpe"]

[ext_resource type="Script" path="res://scripts/test_scenes/test_launcher.gd" id="1_x2v8k"]

[node name="TestLauncher" type="Node3D"]
script = ExtResource("1_x2v8k")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Motif Test Scenes"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/Panel/VBoxContainer"]
layout_mode = 2

[node name="ApartmentTestButton" type="Button" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Original Apartment Test"

[node name="BuildingTestButton" type="Button" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Building Generation Test"

[node name="LayoutsTestButton" type="Button" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Apartment Layouts Test"

[node name="StudioApartmentButton" type="Button" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Studio Apartment (Furnished)"

[node name="CityTestButton" type="Button" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "City Generation Test"